gramatica e stuff.txt
portugol -> func_list ';' inicio code
func_list -> func | func_list ';' func
func -> FUNCAO var '(' args ')' com_list ';' FIMFUNCAO
code -> s | code ';' s
s ->  comando | fim
ciclo -> PARA var DE e ATE e FACA com_list ';' FIMPARA
ciclo2 -> ENQUANTO n FACA com_list ';' FIMENQUANTO

comando -> e | ciclo | VAR assign e | ESCREVA '(' e_list ')'
        | LEIA  '(' var_list ')' | VARTYPE ':' var_list
        | SE e ENTAO com_list ';' SENAO com_list ';' FIMSE
        | SE e ENTAO com_list ';' fimse

com_list -> comando | com_list ';' comando

e_list -> e | e_list ',' e
e -> var | '(' e ')' | b | n | string | var '(' e_list ')' | VAR '(' ')'

n -> NR | '-' e | e '+' e | e '-' e | e '*' e | e '/' e
    | e '<' e | e leq e | e '>' e | e geq e | e '=' e | e dif e

b -> f | e OR e | e AND e | e XOR e
f -> true | false | not f

var_list -> var | var_list ',' var
args: € | var_list
